--- a/index.html
+++ b/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css"/>
     <title>Document</title>
   </head>
   <body>
-    Hello buddy
+    Body color
+    <div class="dark-accent"> Dark accent</div>
+    <div class="main-color">Main color</div>
+    <div class="light-accent">Light accent</div>
   </body>
 </html>
