circle img added

--- a/index.html
+++ b/index.html
@@ -13,5 +13,6 @@
     <div class="main-color">Main color</div>
     <div class="light-accent">Light accent</div>
     <img src="/circlegame.jpg" />
+    <div class="main-color">Got you, idiot</div>
   </body>
 </html>
